# trusted-ai

./: LICENSE  README.md  pyproject.toml
data/: loan_approval_biased.csv
notebooks/: bias-detection.ipynb
