[tool.poetry]
name = "ai-bias"
version = "0.1.0"
description = "Project for testing AI bias detection and mitigation methods."
authors = ["janwithb <janwithb@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
numpy = "^1.25.2"
shap = "^0.42.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
